--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <iframe src="https://www.youtube.com/embed/your-video-id" title="Medicare & Final Expense Overview"></iframe>
     </div>
 
-    <form id="lead-form" action="https://formsubmit.co/your-email@example.com" method="POST">
+    <form id="lead-form" action="https://formsubmit.co/tsicmedicare@gmail.com" method="POST">
         <h2>Request Your Free Quote</h2>
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
